feat: link editorial sources and add translations
